<?xml version="1.0"?>
<package>
  <name>tractobots_gps</name>
  <version>0.0.1</version>
  <description>
  The tractobots_gps package is used for controlling a gps receiver module.
  </description>

  <author>Kyler Laird</author>
  <maintainer email="KylerLaird@todo.com">Kyler Laird</maintainer>
  <url type="repository">https://github.com/kylerlaird/tractobots.git</url>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
