<?xml version="1.0"?>
<package>
  <name>tractobots_navigation</name>
  <version>0.0.1</version>
  <description>
  The tractobots_navigation package is used for providing the
  appropiated signals for controlling the tractobot tractor mobile
  platform.
  </description>

  <author>Kyler Laird</author>
  <maintainer email="KylerLaird@todo.com">Kyler Laird</maintainer>
  <url type="repository">https://github.com/kylerlaird/tractobots.git</url>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
